--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             color: #fff;
         }
 
-        /* Profile image */
+        /KevBayliss.github.io
+/KevBaylissArt_ProfilePic.png/
         .profile-img {
             width: 100px;
             height: 100px;
@@ -100,7 +101,8 @@
 <body>
 
 <header>
-    <img class="banner" src="/KevBaylissArt_Banner_1920.png" alt="Kev Bayliss Art">
+    <img class="banner" src="KevBayliss.github.io
+/KevBaylissArt_Banner_1200.jpg" alt="Kev Bayliss Art">
 </header>
 
 <section>
