--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
             color: #fff;
         }
 
-        /KevBayliss.github.io
-/KevBaylissArt_ProfilePic.png/
+        /*image*/
         .profile-img {
             width: 100px;
             height: 100px;
