--- a/index.html
+++ b/index.html
@@ -113,13 +113,36 @@
     <a href="https://www.twitch.tv/Kev_Bayliss" class="button button-blue">Watch Me Paint / Play LIVE on Twitch</a>
 </section>
 
-<section class="about-me">
-    <img class="profile-img" src="KevBayliss.github.io
-/KevBaylissArt_ProfilePic.png" alt="Kev Bayliss Profile Picture">
-    <div class="about-me-text">
-        <h2>About Me</h2>
-        <p>I have been an artist in the video game industry since 1987, working on iconic titles and creating characters that have become a part of video game history. I offer commissioned artwork and also sell original works on eBay. Follow my journey on social media and watch me live on Twitch where I create art in real-time.</p>
-    </div>
+<section class="section">
+  <h1>Kev Bayliss — Artist & Game Creator</h1>
+
+  <p class="lead">
+    I’m a British artist and game creator with a career spanning traditional painting,
+    character design, and video game development. Starting my professional journey in the late 1980s,
+    I contributed to some of the most iconic games of the 16-bit and early 3D era. As a key member of the
+    team at Rare, I had the privilege of bringing characters like Donkey Kong, Diddy Kong, and the
+    Battletoads to life, leaving a lasting impact on the gaming world.
+  </p>
+
+  <p>
+    From the early days of creating the Battletoads and Donkey Kong characters, to later working on titles like 
+    **Killer Instinct** and **Starfox Adventures**, my work has spanned multiple generations of gaming.
+    I’ve been fortunate enough to work with some of the most talented teams in the industry, creating 
+    characters that have become synonymous with the history of video games.
+  </p>
+
+  <p>
+    After my time at Rare, I continued to work in game art, transitioning to new projects and roles, 
+    including collaborations with **Playtonic Games** on the **Yooka-Laylee** franchise. My focus now
+    lies in creating original paintings, game-inspired artwork, and custom commissions. I draw from my
+    decades of experience, combining hand-painted techniques with my love for character design and storytelling.
+  </p>
+
+  <p>
+    Whether I’m creating a new piece of artwork or sharing my creative process live on **Twitch**,
+    my goal is to bring the magic of game art and design to fans around the world. 
+    Join me on my journey as I continue to create and share my passion for video games and art.
+  </p>
 </section>
 
 <section>
