--- a/index.html
+++ b/index.html
@@ -146,13 +146,25 @@
 </section>
 
 <section>
-    <h2>Follow Me on Social Media</h2>
-    <div class="social-icons">
-        <a href="https://twitter.com/Kev_Bayliss" target="_blank">'X'</a>
-        <a href="https://www.instagram.com/Kev_Bayliss" target="_blank">Instagram</a>
-        <a href="https://www.linkedin.com/in/kevbayliss/" target="_blank">LinkedIn</a>
-        <a href="https://bsky.app/profile/kevbayliss.bsky.social" target="_blank">BlueSky</a>
-    </div>
+  <h2>Follow Me on Social Media</h2>
+  <div class="social-icons">
+    <!-- Twitter Icon -->
+    <a href="https://x.com/Kev_Bayliss" target="_blank" class="icon-btn">
+      <img src="/images/icons/twitter-icon.png" alt="Twitter" class="icon">
+    </a>
+    <!-- Instagram Icon -->
+    <a href="https://www.instagram.com/Kev_Bayliss" target="_blank" class="icon-btn">
+      <img src="/images/icons/instagram-icon.png" alt="Instagram" class="icon">
+    </a>
+    <!-- LinkedIn Icon -->
+    <a href="https://www.linkedin.com/in/kevbayliss/" target="_blank" class="icon-btn">
+      <img src="/images/icons/linkedin-icon.png" alt="LinkedIn" class="icon">
+    </a>
+    <!-- BlueSky Icon -->
+    <a href="https://bsky.app/profile/kevbayliss.bsky.social" target="_blank" class="icon-btn">
+      <img src="/images/icons/bluesky-icon.png" alt="BlueSky" class="icon">
+    </a>
+  </div>
 </section>
 
 <footer>
