--- a/index.html
+++ b/index.html
@@ -116,34 +116,29 @@
 <section class="section">
   <h1>Kev Bayliss — Artist & Game Creator</h1>
 
-  <p class="lead">
-    I’m a British artist and game creator with a career spanning traditional painting,
-    character design, and video game development. Starting my professional journey in the late 1980s,
-    I contributed to some of the most iconic games of the 16-bit and early 3D era. As a key member of the
-    team at Rare, I had the privilege of bringing characters like Donkey Kong, Diddy Kong, and the
-    Battletoads to life, leaving a lasting impact on the gaming world.
-  </p>
+  <div class="about-me">
+    <img class="profile-img" src="KevBayliss.github.io
+/KevBaylissArt_ProfilePic.png" alt="Kev Bayliss Profile Picture">
+    <div class="about-me-text">
+      <p class="lead">
+        I’m a British artist and game creator with a career spanning traditional painting, character design, and video game development. My journey began in the late 1980s at **Rare Ltd**, where I played a pivotal role in shaping some of the most beloved characters and franchises in video game history.
+      </p>
 
-  <p>
-    From the early days of creating the Battletoads and Donkey Kong characters, to later working on titles like 
-    **Killer Instinct** and **Starfox Adventures**, my work has spanned multiple generations of gaming.
-    I’ve been fortunate enough to work with some of the most talented teams in the industry, creating 
-    characters that have become synonymous with the history of video games.
-  </p>
+      <p>
+        One of my most significant achievements was redesigning **Donkey Kong** for Nintendo, a project that led to a lasting collaboration between **Rare** and Nintendo. In addition, I co-created iconic character franchises such as **Battletoads**, **Diddy Kong**, and **Killer Instinct**, bringing to life unforgettable characters that have stood the test of time in the gaming world.
+      </p>
 
-  <p>
-    After my time at Rare, I continued to work in game art, transitioning to new projects and roles, 
-    including collaborations with **Playtonic Games** on the **Yooka-Laylee** franchise. My focus now
-    lies in creating original paintings, game-inspired artwork, and custom commissions. I draw from my
-    decades of experience, combining hand-painted techniques with my love for character design and storytelling.
-  </p>
+      <p>
+        Throughout my career, I have worked on a variety of groundbreaking titles, contributing to the visual direction and character design of many games that helped define the golden age of the 16-bit and early 3D eras. My expertise spans hand-painted techniques and digital art, allowing me to create art that resonates with both gaming fans and art collectors alike.
+      </p>
 
-  <p>
-    Whether I’m creating a new piece of artwork or sharing my creative process live on **Twitch**,
-    my goal is to bring the magic of game art and design to fans around the world. 
-    Join me on my journey as I continue to create and share my passion for video games and art.
-  </p>
+      <p>
+        Today, I focus on creating original paintings, game-inspired artwork, and commissioned pieces that reflect my love for storytelling and character design. Whether painting live on **Twitch** or working on custom commissions, my goal is to bring the same passion and creativity to each new project that I’ve poured into the games that shaped my career.
+      </p>
+    </div>
+  </div>
 </section>
+
 
 <section>
   <h2>Follow Me on Social Media</h2>
