--- a/index.html
+++ b/index.html
@@ -118,26 +118,28 @@
 
   <div class="about-me">
     <img class="profile-img" src="KevBayliss.github.io
-/KevBaylissArt_ProfilePic.png" alt="Kev Bayliss Profile Picture">
+/KevBaylissArt_ProfilePic.png
+" alt="Kev Bayliss Profile Picture">
     <div class="about-me-text">
       <p class="lead">
-        I’m a British artist and game creator with a career spanning traditional painting, character design, and video game development. My journey began in the late 1980s at **Rare Ltd**, where I played a pivotal role in shaping some of the most beloved characters and franchises in video game history.
+        I’m a British artist and game creator with a career that spans over 30 years in the video game industry. I began my journey in the late 1980s at **Rare Ltd**, where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
       </p>
 
       <p>
-        One of my most significant achievements was redesigning **Donkey Kong** for Nintendo, a project that led to a lasting collaboration between **Rare** and Nintendo. In addition, I co-created iconic character franchises such as **Battletoads**, **Diddy Kong**, and **Killer Instinct**, bringing to life unforgettable characters that have stood the test of time in the gaming world.
+        One of my most significant achievements was redesigning **Donkey Kong** for Nintendo, a project that led to a collaboration between **Rare** and Nintendo that continues to this day. In addition, I co-created legendary character franchises like **Battletoads**, **Diddy Kong**, and **Killer Instinct**. These iconic characters and games have left a lasting legacy in the gaming world, and I'm proud to have played a part in their creation.
       </p>
 
       <p>
-        Throughout my career, I have worked on a variety of groundbreaking titles, contributing to the visual direction and character design of many games that helped define the golden age of the 16-bit and early 3D eras. My expertise spans hand-painted techniques and digital art, allowing me to create art that resonates with both gaming fans and art collectors alike.
+        Throughout my career, I’ve worked on a variety of groundbreaking titles, contributing to both the visuals and the gameplay mechanics that defined a generation of gamers. My work helped shape the golden era of gaming, and I had the pleasure of collaborating with some of the most talented minds in the industry.
       </p>
 
       <p>
-        Today, I focus on creating original paintings, game-inspired artwork, and commissioned pieces that reflect my love for storytelling and character design. Whether painting live on **Twitch** or working on custom commissions, my goal is to bring the same passion and creativity to each new project that I’ve poured into the games that shaped my career.
+        Today, I continue to create and share my passion for art and character design. My focus is on original paintings, digital artwork, and commissioned pieces, blending hand-painted techniques with my experience in digital design. Whether I'm working on a new commission or painting live on **Twitch**, I’m always eager to share my creative process and the stories behind the characters and worlds I’ve helped bring to life.
       </p>
     </div>
   </div>
 </section>
+
 
 
 <section>
