--- a/index.html
+++ b/index.html
@@ -147,19 +147,23 @@
   <div class="social-icons">
     <!-- Twitter Icon -->
     <a href="https://x.com/Kev_Bayliss" target="_blank" class="icon-btn">
-      <img src="/images/icons/twitter-icon.png" alt="Twitter" class="icon">
+      <img src="KevBayliss.github.io
+/x logo.png" alt="Twitter" class="icon">
     </a>
     <!-- Instagram Icon -->
     <a href="https://www.instagram.com/Kev_Bayliss" target="_blank" class="icon-btn">
-      <img src="/images/icons/instagram-icon.png" alt="Instagram" class="icon">
+      <img src="KevBayliss.github.io
+/insta logo.png" alt="Instagram" class="icon">
     </a>
     <!-- LinkedIn Icon -->
     <a href="https://www.linkedin.com/in/kevbayliss/" target="_blank" class="icon-btn">
-      <img src="/images/icons/linkedin-icon.png" alt="LinkedIn" class="icon">
+      <img src="KevBayliss.github.io
+/linked in logo.png" alt="LinkedIn" class="icon">
     </a>
     <!-- BlueSky Icon -->
     <a href="https://bsky.app/profile/kevbayliss.bsky.social" target="_blank" class="icon-btn">
-      <img src="/images/icons/bluesky-icon.png" alt="BlueSky" class="icon">
+      <img src="KevBayliss.github.io
+/BlueSky Logo.png" alt="BlueSky" class="icon">
     </a>
   </div>
 </section>
