--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             margin-left: auto;
             margin-right: auto;
         }
+.icon {
+    width: 30px; /* Adjust the size as needed */
+    height: 30px; /* Adjust the size as needed */
+}
 
         header {
             background-color: #000;
@@ -118,11 +122,10 @@
 
   <div class="about-me">
     <img class="profile-img" src="KevBayliss.github.io
-/KevBaylissArt_ProfilePic.png
-" alt="Kev Bayliss Profile Picture">
+/KevBaylissArt_ProfilePic_512x512.jpg" alt="Kev Bayliss Profile Picture">
     <div class="about-me-text">
       <p class="lead">
-        I’m a British artist and game creator with a career that spans over 30 years in the video game industry. I began my journey in the late 1980s at **Rare Ltd**, where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
+        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at **Rare Ltd**, where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
       </p>
 
       <p>
@@ -139,6 +142,7 @@
     </div>
   </div>
 </section>
+
 
 
 
