--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 /KevBaylissArt_ProfilePic_512x512.jpg" alt="Kev Bayliss Profile Picture">
     <div class="about-me-text">
       <p class="lead">
-        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at **Rare Ltd**, where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
+        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at Rare Ltd, where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
       </p>
 
       <p>
-        One of my most significant achievements was redesigning **Donkey Kong** for Nintendo, a project that led to a collaboration between **Rare** and Nintendo that continues to this day. In addition, I co-created legendary character franchises like **Battletoads**, **Diddy Kong**, and **Killer Instinct**. These iconic characters and games have left a lasting legacy in the gaming world, and I'm proud to have played a part in their creation.
+       Some of my most significant achievements are redesigning Donkey Kong and creating Diddy Kong for Nintendo and creating Microsoft's Battletoads and Killer Instinct character franchises. These iconic characters and games have left a lasting legacy in the gaming world, and I'm proud to have played a part in their creation.
       </p>
 
       <p>
@@ -137,7 +137,7 @@
       </p>
 
       <p>
-        Today, I continue to create and share my passion for art and character design. My focus is on original paintings, digital artwork, and commissioned pieces, blending hand-painted techniques with my experience in digital design. Whether I'm working on a new commission or painting live on **Twitch**, I’m always eager to share my creative process and the stories behind the characters and worlds I’ve helped bring to life.
+        Today, I continue to create and share my passion for art and character design. My focus is on original paintings, digital artwork, and commissioned pieces, blending hand-painted techniques with my experience in digital design. Whether I'm working on a new commission or painting live on Twitch, I’m always eager to share my creative process and the stories behind the characters and worlds I’ve helped bring to life.
       </p>
     </div>
   </div>
