--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         .social-icons a {
             color: #000;
-            font-size: 24px;
+            font-size: 50px;
             margin: 0 15px;
             text-decoration: none;
         }
@@ -131,17 +131,21 @@
 
     <!-- Email Button with Custom Icon -->
     <a href="mailto:KevBaylissArt@Outlook.com" class="button button-red">
-        <img src="/images/icons/email-icon.png" alt="Email" class="icon"> Email for Commissions
+        <img src="KevBayliss.github.io
+/mail icon.png" alt="Email" class="icon"> Email for Commissions
     </a>
 
     <!-- eBay Button with Custom Icon -->
     <a href="https://www.ebay.co.uk/usr/KevBaylissArt" class="button button-green">
-        <img src="/images/icons/ebay-icon.png" alt="eBay" class="icon"> View Existing Works on eBay
+        <img src="KevBayliss.github.io
+/ebay icon.png" alt="eBay" class="icon"> View Existing Works on eBay
     </a>
 
     <!-- Twitch Button with Custom Icon -->
     <a href="https://www.twitch.tv/KevBaylissArt" class="button button-blue">
-        <img src="/images/icons/twitch-icon.png" alt="Twitch" class="icon"> Watch Me Paint / Play LIVE on Twitch
+        <img src="KevBayliss.github.io
+/twitch icon.png
+" alt="Twitch" class="icon"> Watch Me Paint / Play LIVE on Twitch
     </a>
 </section>
 
