--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     width: 20px; /* Size of the icon */
     height: 20px; /* Size of the icon */
     margin-right: 10px; /* Space between icon and text */
-
+    filter: invert(1); /* Inverts the icon color to match text color */
+}
 
 /* Button color classes */
 .button-red {
@@ -157,19 +158,19 @@
 /KevBaylissArt_ProfilePic_512x512.jpg" alt="Kev Bayliss Profile Picture">
     <div class="about-me-text">
       <p class="lead">
-        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at Rare Ltd where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
+        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at Rare Ltd, where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
       </p>
 
       <p>
-       Some of my most significant achievements have been redesigning DONKEY KONG and creating DIDDY KONG for Nintendo, and creating Microsoft's KILLER INSTINCT and BATTLETOADS character franchises, leaving a lasting legacy in the gaming world.
+       Some of my most significant achievements are redesigning Donkey Kong and creating Diddy Kong for Nintendo and creating Microsoft's Battletoads and Killer Instinct character franchises. These iconic characters and games have left a lasting legacy in the gaming world, and I'm proud to have played a part in their creation.
       </p>
 
       <p>
-        Throughout my career, I’ve worked on a variety of titles, contributing both to the visuals and gameplay mechanics that defined a generation of gamers. My work helped shape the golden era of gaming, and I have had the pleasure of collaborating with some of the most talented minds in the industry.
+        Throughout my career, I’ve worked on a variety of groundbreaking titles, contributing to both the visuals and the gameplay mechanics that defined a generation of gamers. My work helped shape the golden era of gaming, and I had the pleasure of collaborating with some of the most talented minds in the industry.
       </p>
 
       <p>
-        Today, I continue to create and share my passion for art and character design for video games. My focus is on original paintings, digital artwork, and commissioned pieces, blending hand-painted techniques with my experience in digital design. Whether I'm working on a new commission or painting live on Twitch, I’m always eager to share my creative process and the stories behind the characters and worlds I’ve helped bring to life.
+        Today, I continue to create and share my passion for art and character design. My focus is on original paintings, digital artwork, and commissioned pieces, blending hand-painted techniques with my experience in digital design. Whether I'm working on a new commission or painting live on Twitch, I’m always eager to share my creative process and the stories behind the characters and worlds I’ve helped bring to life.
       </p>
     </div>
   </div>
