--- a/index.html
+++ b/index.html
@@ -54,12 +54,6 @@
     filter: invert(1); /* Inverts the icon color to match text color */
 }
 
-        .socialicon {
-    width: 50px; /* Size of the icon */
-    height: 50px; /* Size of the icon */
-    margin-right: 16px; /* Space between icon and text */
-}
-
 /* Button color classes */
 .button-red {
     background-color: #e60000; /* Red for email */
@@ -165,7 +159,7 @@
       </p>
 
       <p>
-       Some of my most significant achievements have been redesigning DONKEY KONG and creating DIDDY KONG for Nintendo, and creating Microsoft's KILLER INSTINCT and BATTLETOADS character franchises, leaving a lasting legacy in the gaming world.
+       Some of my most significant achievements have been creating the DONKEY KONG character for Nintendo's Donkey Kong Country video gameand creating DIDDY KONG for Nintendo, and creating Microsoft's KILLER INSTINCT and BATTLETOADS.
       </p>
 
       <p>
@@ -188,22 +182,22 @@
     <!-- Twitter Icon -->
     <a href="https://x.com/Kev_Bayliss" target="_blank" class="icon-btn">
       <img src="KevBayliss.github.io
-/x logo.png" alt="Twitter" class="socialicon">
+/x logo.png" alt="Twitter" class="social-icons">
     </a>
     <!-- Instagram Icon -->
     <a href="https://www.instagram.com/Kev_Bayliss" target="_blank" class="icon-btn">
       <img src="KevBayliss.github.io
-/insta logo.png" alt="Instagram" class="socialicon">
+/insta logo.png" alt="Instagram" class="social-icons">
     </a>
     <!-- LinkedIn Icon -->
     <a href="https://www.linkedin.com/in/kevbayliss/" target="_blank" class="icon-btn">
       <img src="KevBayliss.github.io
-/linked in logo.png" alt="LinkedIn" class="socialicon">
+/linked in logo.png" alt="LinkedIn" class="social-icons">
     </a>
     <!-- BlueSky Icon -->
     <a href="https://bsky.app/profile/kevbayliss.bsky.social" target="_blank" class="icon-btn">
       <img src="KevBayliss.github.io
-/BlueSky Logo.png" alt="BlueSky" class="socialicon">
+/BlueSky Logo.png" alt="BlueSky" class="social-icons">
     </a>
   </div>
 </section>
