--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
         I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at Rare Ltd where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
       </p>
 
-      <p>
-       Some of my most significant achievements have been creating the DONKEY KONG character for Nintendo's Donkey Kong Country video gameand creating DIDDY KONG for Nintendo, and creating Microsoft's KILLER INSTINCT and BATTLETOADS.
-      </p>
+<p>
+    One of my proudest moments in the gaming world was reimagining <strong>Donkey Kong</strong> in 1994, a project that has left a lasting legacy. Alongside <strong>Donkey Kong</strong>, I also created <strong>Diddy Kong</strong> for Nintendo, and helped shape the characters of <strong>Killer Instinct</strong> and <strong>Battletoads</strong>. These milestones in my career continue to be celebrated in the gaming community, and it’s been an incredible experience to contribute to their enduring impact.
+</p>
 
       <p>
         Throughout my career, I’ve worked on a variety of titles, contributing both to the visuals and gameplay mechanics that defined a generation of gamers. My work helped shape the golden era of gaming, and I have had the pleasure of collaborating with some of the most talented minds in the industry.
