--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </p>
 
 <p>
-    One of my proudest moments in the gaming world was reimagining <strong>Donkey Kong</strong> in 1994, a project that has left a lasting legacy. Alongside <strong>Donkey Kong</strong>, I also created <strong>Diddy Kong</strong> for Nintendo, and helped shape the characters of <strong>Killer Instinct</strong> and <strong>Battletoads</strong>. These milestones in my career continue to be celebrated in the gaming community, and it’s been an incredible experience to contribute to their enduring impact.
+    In 1994, I had the opportunity to redesign <strong>Donkey Kong</strong>, and I’m proud that this character has remained an iconic figure ever since. Alongside this, I created <strong>Diddy Kong</strong> for Nintendo and contributed to the development of the characters from <strong>Killer Instinct</strong> and <strong>Battletoads</strong>. These franchises have shaped the world of gaming, and I’m honored to have been part of that journey.
 </p>
 
       <p>
