--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </p>
 
 <p>
-    In 1994, I had the opportunity to redesign <strong>Donkey Kong</strong>, and I’m proud that this character has remained an iconic figure ever since. Alongside this, I created <strong>Diddy Kong</strong> for Nintendo and contributed to the development of the characters from <strong>Killer Instinct</strong> and <strong>Battletoads</strong>. These franchises have shaped the world of gaming, and I’m honored to have been part of that journey.
+    In 1994, I had the opportunity to redesign <strong>Donkey Kong</strong>, and I’m proud that this character has remained an iconic figure ever since. Alongside this, I created <strong>Diddy Kong</strong> for Nintendo and also the characters from <strong>Killer Instinct</strong> and <strong>Battletoads</strong>. These franchises have shaped the world of gaming, and I’m honored to have been part of that journey.
 </p>
 
       <p>
