--- a/index.html
+++ b/index.html
@@ -130,20 +130,20 @@
     <!-- Email Button with Custom Icon -->
     <a href="mailto:KevBaylissArt@Outlook.com" class="button button-red">
         <img src="KevBayliss.github.io
-/mail icon.png" alt="Email" class="icon"> EMAIL FOR COMMISSIONS INFO
+/mail icon.png" alt="Email" class="icon"> <strong>EMAIL ME FOR COMMISSIONS</strong>
     </a>
 
     <!-- eBay Button with Custom Icon -->
     <a href="https://www.ebay.co.uk/usr/KevBaylissArt" class="button button-green">
         <img src="KevBayliss.github.io
-/ebay icon.png" alt="eBay" class="icon"> SHOP EXISTING WORKS ON EBAY
+/ebay icon.png" alt="eBay" class="icon"> <strong>SHOP EXISTING WORK ON EBAY</strong>
     </a>
 
     <!-- Twitch Button with Custom Icon -->
     <a href="https://www.twitch.tv/KevBaylissArt" class="button button-blue">
         <img src="KevBayliss.github.io
 /twitch icon.png
-" alt="Twitch" class="icon"> WATCH MY TWICH CHANNEL
+" alt="Twitch" class="icon"><strong>WATCH MY TWITCH CHANNEL</strong>
     </a>
     
 </section>
