--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
     </a>
 
     <!-- eBay Button with Custom Icon -->
-    <a href="https://www.ebay.co.uk/usr/KevBaylissArt" class="button button-green">
+    <a href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" class="button button-green">
         <img src="KevBayliss.github.io
 /ebay icon.png" alt="eBay" class="icon"> <strong>SHOP EXISTING WORK ON EBAY</strong>
     </a>
 
     <!-- Twitch Button with Custom Icon -->
-    <a href="https://www.twitch.tv/KevBaylissArt" class="button button-blue">
+    <a href="https://www.twitch.tv/Kev_Bayliss" class="button button-blue">
         <img src="KevBayliss.github.io
 /twitch icon.png
 " alt="Twitch" class="icon"><strong>WATCH MY TWITCH CHANNEL</strong>
