--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
     margin-right: 16px; /* Space between icon and text */
     filter: invert(1); /* Inverts the icon color to match text color */
 }
+        
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kev Bayliss Art</title>
+
+    <!-- Link to favicon -->
+    <link rel="icon" href="/path_to_favicon/favicon.ico" type="image/x-icon">
+
+    <!-- Other metadata and links here -->
+</head>
 
 
         footer {
