--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <title>Kev Bayliss Art</title>
 
     <!-- Link to favicon -->
-    <link rel="icon" href="/path_to_favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="KevBayliss.github.io
+/favicon_initials_64x64.png" type="image/x-icon">
 
     <!-- Other metadata and links here -->
 </head>
