--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         
         header {
-            background-color: #000;
+           /* background-color: #000;*/
             padding:30px;
             text-align: center;
             color: #fff;
