--- a/index.html
+++ b/index.html
@@ -157,19 +157,19 @@
 /KevBaylissArt_ProfilePic_256.jpg" alt="Kev Bayliss Profile Picture">
     <div class="about-me-text">
       <p class="lead">
-        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at Rare Ltd where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
+        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry beginning my journey in the late 1980s at Rare Ltd.
       </p>
 
 <p>
-    In 1994, I had the opportunity to redesign <strong>Donkey Kong</strong>, and I’m proud that this character has remained an iconic figure ever since. Alongside this, I created <strong>Diddy Kong</strong> for Nintendo and also the characters from <strong>Killer Instinct</strong> and <strong>Battletoads</strong>. These franchises have shaped the world of gaming, and I’m honored to have been part of that journey.
+    Here I had the opportunity to redesign <strong>Donkey Kong</strong>, and I’m proud that he has remained an iconic figure ever since. Alongside this, I created <strong>Diddy Kong</strong> for Nintendo and also the characters from <strong>Killer Instinct</strong> and <strong>Battletoads</strong>.
 </p>
 
       <p>
-        Throughout my career, I’ve worked on a variety of titles, contributing both to the visuals and gameplay mechanics that defined a generation of gamers. My work helped shape the golden era of gaming, and I have had the pleasure of collaborating with some of the most talented minds in the industry.
+        Throughout my career, I’ve worked on a variety of titles, contributing to the visuals that defined a generation of gamers. My work helped shape the golden era of gaming, and I've had the pleasure of collaborating with some of the most talented minds in the industry.
       </p>
 
       <p>
-        Today, I continue to create and share my passion for art and character design for video games. My focus is on original paintings, digital artwork, and commissioned pieces, blending hand-painted techniques with my experience in digital design. Whether I'm working on a new commission or painting live on Twitch, I’m always eager to share my creative process and the stories behind the characters and worlds I’ve helped bring to life.
+        Today, I continue to create and share my passion for art. My focus is on original paintings, digital artwork, and commissioned pieces. Whether I'm working on a new commission or painting live on Twitch, I’m always eager to share my creative process and stories behind the characters and worlds I’ve helped bring to life.
       </p>
     </div>
   </div>
