--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         header {
             background-color: #000;
-            padding:30px;
+            padding: 30px;
             text-align: center;
             color: #fff;
         }
@@ -162,14 +162,69 @@
     </a>
 
     <!-- eBay Button with Custom Icon -->
-    <a href="https://www.ebay.co.uk/usr/KevBaylissArt" class="button button-green">
+    <a href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" class="button button-green">
         <img src="KevBayliss.github.io/ebay icon.png" alt="eBay" class="icon"> <strong>SHOP EXISTING WORK ON EBAY</strong>
     </a>
 
     <!-- Twitch Button with Custom Icon -->
-    <a href="https://www.twitch.tv/KevBaylissArt" class="button button-blue">
+    <a href="https://www.twitch.tv/Kev_Bayliss" class="button button-blue">
         <img src="KevBayliss.github.io/twitch icon.png" alt="Twitch" class="icon"><strong>WATCH MY TWITCH CHANNEL</strong>
     </a>
 </section>
 
-<section class
+<section class="section">
+  <div class="header-container">
+    <!-- Profile image -->
+    <img class="profile-img" src="KevBayliss.github.io/KevBaylissArt_ProfilePic_256.jpg" alt="Kev Bayliss Profile Picture">
+
+    <!-- Title -->
+    <h1>Kev Bayliss — Artist & Game Creator</h1>
+  </div>
+
+  <div class="about-me-text">
+    <p class="lead">
+        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at Rare Ltd where I had the privilege of contributing to some of the most iconic titles of the 16-bit and early 3D era.
+    </p>
+
+    <p>
+        In 1994, I had the opportunity to redesign <strong>Donkey Kong</strong>, and I’m proud that this character has remained an iconic figure ever since. Alongside this, I created <strong>Diddy Kong</strong> for Nintendo and also the characters from <strong>Killer Instinct</strong> and <strong>Battletoads</strong>. These franchises have shaped the world of gaming, and I’m honored to have been part of that journey.
+    </p>
+
+    <p>
+        Throughout my career, I’ve worked on a variety of titles, contributing both to the visuals and gameplay mechanics that defined a generation of gamers. My work helped shape the golden era of gaming, and I have had the pleasure of collaborating with some of the most talented minds in the industry.
+    </p>
+
+    <p>
+        Today, I continue to create and share my passion for art and character design for video games. My focus is on original paintings, digital artwork, and commissioned pieces, blending hand-painted techniques with my experience in digital design. Whether I'm working on a new commission or painting live on Twitch, I’m always eager to share my creative process and the stories behind the characters and worlds I’ve helped bring to life.
+    </p>
+  </div>
+</section>
+
+<section>
+  <h2>Follow Me on Social Media</h2>
+  <div class="social-icons">
+    <!-- Twitter Icon -->
+    <a href="https://x.com/Kev_Bayliss" target="_blank" class="icon-btn">
+      <img src="KevBayliss.github.io/x logo.png" alt="Twitter" class="social-icons">
+    </a>
+    <!-- Instagram Icon -->
+    <a href="https://www.instagram.com/Kev_Bayliss" target="_blank" class="icon-btn">
+      <img src="KevBayliss.github.io/insta logo.png" alt="Instagram" class="social-icons">
+    </a>
+    <!-- LinkedIn Icon -->
+    <a href="https://www.linkedin.com/in/kevbayliss/" target="_blank" class="icon-btn">
+      <img src="KevBayliss.github.io/linked in logo.png" alt="LinkedIn" class="social-icons">
+    </a>
+    <!-- BlueSky Icon -->
+    <a href="https://bsky.app/profile/kevbayliss.bsky.social" target="_blank" class="icon-btn">
+      <img src="KevBayliss.github.io/BlueSky Logo.png" alt="BlueSky" class="social-icons">
+    </a>
+  </div>
+</section>
+
+<footer>
+    <p>&copy; 2025 Kev Bayliss Art. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
