--- a/index.html
+++ b/index.html
@@ -137,12 +137,14 @@
             margin-right: 20px;
         }
 
-        .about-me {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: left;
-        }
+.about-me {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    margin: 0 auto; /* This ensures the content is centered */
+}
+
 
         .about-me-text {
             max-width: 600px;
