--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         .header-container {
             display: flex; /* Use Flexbox */
             align-items: center; /* Vertically align items */
-            justify-content: flex-start; /* Align to the left */
+            justify-content: center; /* Center content */
             margin-bottom: 20px; /* Space between the image and the text */
         }
 
@@ -110,6 +110,7 @@
         /* Title */
         h1 {
             font-size: 24px; /* Adjust the size as needed */
+            margin: 0; /* Remove default margin */
         }
 
         /* Adjust the about-me section */
