--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         }
 
         header {
-            background-color: #000;
-            padding: 30px;
+           /* background-color: #000;*/
+            padding: 00px;
             text-align: center;
             color: #fff;
         }
