--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <!-- eBay Button with Custom Icon -->
     <a href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" class="button button-green">
-        <img src="KevBayliss.github.io/ebay icon.png" alt="eBay" class="icon"> <strong>SHOP EXISTING WORK ON EBAY</strong>
+        <img src="KevBayliss.github.io/ebay icon.png" alt="eBay" class="icon"> <strong>VISIT MY EBAY STORE</strong>
     </a>
 
     <!-- Twitch Button with Custom Icon -->
