--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 
         /* Button color classes */
         .button-red {
-            background-color: #e60000; /* Red for email */
+            background-color: #ff0000; /* Red for email */
         }
 
         .button-green {
-            background-color: #00cc00; /* Green for eBay */
+            background-color: #00ff00; /* Green for eBay */
         }
 
         .button-blue {
-            background-color: #007bff; /* Blue for Twitch */
+            background-color: #0000ff; /* Blue for Twitch */
         }
 
         .button:hover {
